--- a/todo.org
+++ b/todo.org
@@ -5,7 +5,11 @@ Note: This list is broken on Github (they should really update
 org-ruby).  Please use the 'Raw' link on the right.
 
 * To Do
-** TODO Write an input method
+** DONE Write an input method
+** TODO Improve input methods
+*** TODO Characters not in APL unicode block
+*** TODO more character names in APL-X
+*** TODO is $ a good prefix?  better suggestions?
 ** TODO Add more documentation
 =apl-functions= and =apl-operators=
 ** TODO Check if Monadic/Dyadic detection in eldoc is working correctly
